--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Journey to Become a Full Stack Developer</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>My Daily Blog | A Journey to Become a Full Stack Developer</h1>
+        <div class="header-left">
+            <img src="img/logo.png" alt="AH" class="logo">
+        </div>
+        
+        <div class="header-right">
+            <a class="navbar home" href="#">Home</a>
+            <a class="navbar portfolio" href="#">Portfolio</a>
+            <a class="navbar about" href="#">About</a>
+        </div>
     </header>
+
+    <div class="top-wrapper">
+        <div class="container">
+            <p>Hello World</p>
+        </div>
+    </div>
 
     <footer>
 
