Menambahkan background cover dan web responsive

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Journey to Become a Full Stack Developer</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css"> 
+    <script src="https://kit.fontawesome.com/5694ef12b2.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -12,6 +14,8 @@
             <img src="img/logo.png" alt="AH" class="logo">
         </div>
         
+        <span class="fas fa-bars menu-icon"></span>
+
         <div class="header-right">
             <a class="navbar home" href="#">Home</a>
             <a class="navbar portfolio" href="#">Portfolio</a>
@@ -21,7 +25,7 @@
 
     <div class="top-wrapper">
         <div class="container">
-            <p>Hello World</p>
+            <h1>A Journey to Become a Full Stack Developer</h1>
         </div>
     </div>
 
