Menambahkan text judul dan isi konten

--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
 
     <div class="top-wrapper">
         <div class="container">
-            <h1>A Journey to Become a Full Stack Developer</h1>
+            <h1>Daily Blog | The Journey</h1>
+            <p>This is a story of a man who want to become a professional Full Stack Developer</p>
         </div>
+    </div>
+
+    <div class="content">
+        <article>
+            <h1>Welcome to my blog</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit, sequi! Id, itaque. Tempora asperiores voluptates quod accusamus, similique ut aperiam repellendus esse reiciendis perferendis architecto ab itaque deserunt. Vel velit dolorum mollitia eos inventore, vitae culpa ipsam commodi eaque magnam vero illo debitis aspernatur temporibus, minima saepe consectetur atque accusantium pariatur rerum. Incidunt officia expedita in quam possimus id assumenda laudantium ab, reprehenderit tempora. Animi eligendi maiores iusto, voluptatibus beatae minus magni nisi delectus commodi eaque! Molestias sed quam dolor illum consequuntur. Repellendus, eos dicta obcaecati hic vel cupiditate facilis provident iure in. Aperiam blanditiis pariatur molestias ex commodi facere.</p>
+        </article>
     </div>
 
     <footer>
