Menambahkan Footer dan Navbar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
         <div class="header-right">
             <a class="navbar home" href="#">Home</a>
+            <a class="navbar blog" href="#">Blog</a>
             <a class="navbar portfolio" href="#">Portfolio</a>
             <a class="navbar about" href="#">About</a>
         </div>
@@ -38,7 +39,17 @@
     </div>
 
     <footer>
-
+        <div class="icon-wrapper">
+            <p>Follow Us</p>
+            <div class="icon">
+                <span class="fab fa-facebook-square facebook"></span>
+                <span class="fab fa-twitter-square twitter"></span>
+                <span class="fab fa-instagram-square instagram"></span>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>&#169 Abdul Hakim 2020</p>
+        </div>
     </footer>
 
 </body>
