Menambahkan article pertama

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="header-right">
             <a class="navbar home" href="#">Home</a>
-            <a class="navbar blog" href="#">Blog</a>
+            <a class="navbar archives" href="#">Archives</a>
             <a class="navbar portfolio" href="#">Portfolio</a>
             <a class="navbar about" href="#">About</a>
         </div>
@@ -33,8 +33,18 @@
 
     <div class="content">
         <article>
-            <h1>Welcome to my blog</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit, sequi! Id, itaque. Tempora asperiores voluptates quod accusamus, similique ut aperiam repellendus esse reiciendis perferendis architecto ab itaque deserunt. Vel velit dolorum mollitia eos inventore, vitae culpa ipsam commodi eaque magnam vero illo debitis aspernatur temporibus, minima saepe consectetur atque accusantium pariatur rerum. Incidunt officia expedita in quam possimus id assumenda laudantium ab, reprehenderit tempora. Animi eligendi maiores iusto, voluptatibus beatae minus magni nisi delectus commodi eaque! Molestias sed quam dolor illum consequuntur. Repellendus, eos dicta obcaecati hic vel cupiditate facilis provident iure in. Aperiam blanditiis pariatur molestias ex commodi facere.</p>
+            <h1>My First Website</h1>
+            <div class="penulis">
+                <p>by <a class="nama-penulis" href="#">Abdul Hakim</a></p>
+                <p><a class="far fa-calendar-alt cal" href="#"></a> Thursday, 9 September 2020</p>
+            </div>
+
+
+            <p>Insyaallah, bulan depan gw akan mengikuti bootcamp dari Hactiv8 selama kurang lebih 16 minggu. Dan sebelum mengikuti bootcamp tsb, gw pun sudah cari2 info dari orang2 yg sudah belajar disana dan ternyata sangat berat cuy dan penuh tekanan. Oleh sebab itu, gw bakalan mempersiapkan segala hal seperti baca2 materi yang akan diajarkan disana (berhubungan gw belum ada basic programming sama sekali), biar nanti ketika dikelas tidak buta2 amat dan bisa mengikuti pembelajaran dengan baik. BISMILLAH, PASTI BISA!!</p>
+
+            <img src="/img/my-first-website.jpg" alt="my-first-website" width="100%">
+
+            <p>Dan ini dia website pertama gw hasil belajar HTML dan CSS secara otodidak selama kurang lebih 1 minggu. Dan kedepannya website ini akan terus gw update dengan cerita pembelajaran gw untuk bisa menjadi profesional Full Stack Developer.</p>
         </article>
     </div>
 
