--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Journey to Become a Full Stack Developer</title>
+    <title>Home</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css"> 
     <script src="https://kit.fontawesome.com/5694ef12b2.js" crossorigin="anonymous"></script>
@@ -11,16 +11,16 @@
 <body>
     <header>
         <div class="header-left">
-            <img src="img/logo.png" alt="AH" class="logo">
+            <img src="/My Blog/img/logo.png" alt="AH" class="logo">
         </div>
         
         <span class="fas fa-bars menu-icon"></span>
 
         <div class="header-right">
-            <a class="navbar home" href="#">Home</a>
-            <a class="navbar archives" href="#">Archives</a>
-            <a class="navbar portfolio" href="#">Portfolio</a>
-            <a class="navbar about" href="#">About</a>
+            <a class="navbar home" href="/My Blog/index.html">Home</a>
+            <a class="navbar archives" href="/My Blog/blog.html">Blog</a>
+            <a class="navbar portfolio" href="/My Blog/portfolio.html">Portfolio</a>
+            <a class="navbar about" href="/My Blog/about.html">About</a>
         </div>
     </header>
 
@@ -29,38 +29,17 @@
             <h1>Daily Blog | The Journey</h1>
             <p>This is a story of a man who want to become a professional Full Stack Developer</p>
         </div>
-    </div>
 
-    <div class="content">
-        <article>
-            <h1>My First Website</h1>
-            <div class="penulis">
-                <p>by <a class="nama-penulis" href="#">Abdul Hakim</a></p>
-                <p><a class="far fa-calendar-alt cal" href="#"></a> Thursday, 9 September 2020</p>
+        <footer>
+            <div class="icon-wrapper">
+                <div class="icon">
+                    <a href="https://facebook.com"><span class="fab fa-facebook-square facebook"></span></a>
+                    <a href="https://twitter.com"><span class="fab fa-twitter-square twitter"></span></a>
+                    <a href="https://instagra.com"><span class="fab fa-instagram-square instagram"></span></a>
+                </div>
+                <p class="copyright">&#169 AH 2020</p>
             </div>
-
-
-            <p>Insyaallah, bulan depan gw akan mengikuti bootcamp dari Hactiv8 selama kurang lebih 16 minggu. Dan sebelum mengikuti bootcamp tsb, gw pun sudah cari2 info dari orang2 yg sudah belajar disana dan ternyata sangat berat cuy dan penuh tekanan. Oleh sebab itu, gw bakalan mempersiapkan segala hal seperti baca2 materi yang akan diajarkan disana (berhubungan gw belum ada basic programming sama sekali), biar nanti ketika dikelas tidak buta2 amat dan bisa mengikuti pembelajaran dengan baik. BISMILLAH, PASTI BISA!!</p>
-
-            <img src="/img/my-first-website.jpg" alt="my-first-website" width="100%">
-
-            <p>Dan ini dia website pertama gw hasil belajar HTML dan CSS secara otodidak selama kurang lebih 1 minggu. Dan kedepannya website ini akan terus gw update dengan cerita pembelajaran gw untuk bisa menjadi profesional Full Stack Developer.</p>
-        </article>
+        </footer>
     </div>
-
-    <footer>
-        <div class="icon-wrapper">
-            <p>Follow Us</p>
-            <div class="icon">
-                <span class="fab fa-facebook-square facebook"></span>
-                <span class="fab fa-twitter-square twitter"></span>
-                <span class="fab fa-instagram-square instagram"></span>
-            </div>
-        </div>
-        <div class="copyright">
-            <p>&#169 Abdul Hakim 2020</p>
-        </div>
-    </footer>
-
 </body>
 </html>
