--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
     <header>
         <div class="header-left">
-            <img src="/My Blog/img/logo.png" alt="AH" class="logo">
+            <img src="img/logo.png" alt="AH" class="logo">
         </div>
         
         <span class="fas fa-bars menu-icon"></span>
 
         <div class="header-right">
-            <a class="navbar home" href="/My Blog/index.html">Home</a>
-            <a class="navbar archives" href="/My Blog/blog.html">Blog</a>
-            <a class="navbar portfolio" href="/My Blog/portfolio.html">Portfolio</a>
-            <a class="navbar about" href="/My Blog/about.html">About</a>
+            <a class="navbar home" href="index.html">Home</a>
+            <a class="navbar archives" href="blog.html">Blog</a>
+            <a class="navbar portfolio" href="portfolio.html">Portfolio</a>
+            <a class="navbar about" href="about.html">About</a>
         </div>
     </header>
 
