edit link audio

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </table>
 
     <audio id="myAudio" autoplay>
-        <source src="pkemon.mp3" type="audio/mpeg">
+        <source src="/media/pkemon.mp3" type="audio/mpeg">
     </audio>
 
     <script src="script.js"></script>
