--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
                 <table>
                     <tr>
                         <td><img src="/img/bulbasaur.png"></td>
-                        <td><p> is a <strong>LEAF</strong> pokemon and WEAK to <strong>FIRE</strong> pokemon</p></td>
+                        <td><p> is a <strong>LEAF</strong> pokemon and <strong>WEAK</strong> to <strong>FIRE</strong> pokemon</p></td>
                     </tr>
                     <tr>
                         <td><img src="/img/charmander.png"></td>
-                        <td><p> is a <strong>FIRE</strong> pokemon and WEAK to <strong>WATER</strong> pokemon</p></td>
+                        <td><p> is a <strong>FIRE</strong> pokemon and <strong>WEAK</strong> to <strong>WATER</strong> pokemon</p></td>
                     </tr>
                     <tr>
                         <td><img src="/img/squirtle.png"></td>
-                        <td><p> is a <strong>WATER</strong> pokemon and WEAK to <strong>LEAF</strong> pokemon</p></td>
+                        <td><p> is a <strong>WATER</strong> pokemon and <strong>WEAK</strong> to <strong>LEAF</strong> pokemon</p></td>
                     </tr>
                 </table>
             </td>
